# GAPS

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  run-latency-test.sh
env/: .env  Dockerfile  compose.yml
env/dev/: Dockerfile  compose.yml
env/jetson/: Dockerfile  README.md  compose.yml
env/x86/: Dockerfile  compose.yml
examples/: CMakeLists.txt  cross_process_torch.py  helpers.cpp  helpers.hpp  utils.cpp  utils.hpp
examples/arithmetic/: CMakeLists.txt  arithmetic_torch.py
examples/arithmetic/include/: init.hpp
examples/arithmetic/src/: init.cu  run.cpp  run.cu
examples/include/: vector_arithmetic.hpp
examples/inference/: pub-img_reader.py  sub-cnn.py
examples/latency/: CMakeLists.txt  env.hpp  init.cu  init.hpp  run_test.cpp
examples/ping-pong/: CMakeLists.txt  main.cu  rand_init.cu  rand_init.hpp
examples/python/: arithmetic_torch.py  latency-breakdown.py  latency.py  ping-pong.py
examples/python/cnn/: pub-img_reader.py  sub-cnn.py
examples/python/cv_pipeline/: classify.py  face_blur.py  preproc.py  segment.py
examples/python/cv_pipeline/dataset/: README.md  find_images_with_faces.py  paths_to_images_with_at_least_2_faces.txt
examples/python/latency/: run_test.py  run_test_breakdown.py
examples/python/slm/: pub-speech.py  sub-slm.py
examples/python/vit/: pub-img_reader.py  sub-classify.py  sub-segment.py
examples/slm/: pub-speech.py  speech_excerpt.txt  sub-slm.py
examples/src/: cross_process.cu  vector_arithmetic.cu
examples/video/: CMakeLists.txt  blur.cu  blur.hpp  env.hpp  pub_preproc.cpp  pub_preproc.cu  sub_blur.cpp
include/: allocator.hpp  error.hpp  mem_manager.hpp  metadata.hpp  profiling.hpp  pub.hpp  pygaps.hpp  pyshoi.hpp  pyshoz.hpp  sub.hpp  ticket_lock.hpp  work.hpp  zenoh_wrapper.hpp
include/alloc_algo/: tlsf.hpp
include/allocator/: allocator.hpp  base.hpp  shareable.hpp  tlsf.hpp
include/node/: node.hpp  publisher.hpp  subscriber.hpp
include/node/cpp_iface/: publisher.hpp  subscriber.hpp
include/node/python_iface/: publisher.hpp  subscriber.hpp
scripts/: convert.py  format_latency_mpns_test_results.py  format_latency_test_results.py  format_python_latency_test_results.py  get-results.py  get_python_results.py  get_results.py  iox-roudi-config.toml  run-latency-test.sh  run_latency_mpns_test.sh  run_latency_test.sh  run_python_latency_test.sh  run_python_latency_test_breakdown.sh
src/: CMakeLists.txt  allocator.cpp  error.cpp  main.cpp  mem_manager.cpp  profiling.cpp  pub.cpp  pygaps.cpp  pyshoi.cpp  pyshoz.cpp  shareable_test.cu  sub.cpp  ticket_lock.cpp  work.cu  zenoh_wrapper.cpp
src/alloc_algo/: tlsf.cpp
src/allocator/: allocator.cpp  base.cpp  shareable.cu  tlsf.cpp
src/examples/: cross_process.cu  vector_arithmetic.cu
src/node/: node.cpp  publisher.cpp  subscriber.cpp
src/node/cpp_iface/: publisher.cpp  subscriber.cpp
src/node/python_iface/: publisher.cpp  subscriber.cpp
test/: CMakeLists.txt  helpers.hpp  pub-test0.cu  sub-test0.cu  test0-std.cu  test0.cu
tests/: CMakeLists.txt  helpers.hpp  test0-p2p.cu  test0-std.cu  test0.cu
tests/inference/: pub-img_reader.py  sub-cnn.py
tests/latency/: CMakeLists.txt  run_test.cpp  test0-p2p.cu  test0.cpp  test0.cu  test1.cpp
tests/latency/script/: test0.sh
tests/script/: test0.sh
tests/video/: CMakeLists.txt  blur.cu  video_reader.cpp
